--- a/res/layout/secretary_activity.xml
+++ b/res/layout/secretary_activity.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res/com.meijialife.simi"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/activity_bg_color"
-    android:orientation="vertical" xmlns:app="http://schemas.android.com/apk/res/com.meijialife.simi">
+    android:orientation="vertical" >
 
     <include
         android:id="@+id/view_title_bar"
@@ -56,7 +57,8 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="10dp"
                     android:text="会计"
-                    android:textColor="@color/simi_color_dark_gray" />
+                    android:textColor="@color/simi_color_dark_gray"
+                    android:textSize="11sp" />
 
                 <TextView
                     android:id="@+id/item_tv_fav"
@@ -64,7 +66,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:text="工商代理人"
-                    android:textColor="@color/simi_color_dark_gray" />
+                    android:textColor="@color/simi_color_dark_gray"
+                    android:textSize="11sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -86,7 +89,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="北京-海淀区"
-                    android:textColor="@color/simi_color_dark_gray" />
+                    android:textColor="@color/simi_color_dark_gray"
+                    android:textSize="11sp" />
 
                 <ImageView
                     android:id="@+id/item_iv_des_icon"
@@ -101,18 +105,43 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="下单10分钟内响应"
-                    android:textColor="@color/simi_color_dark_gray" />
+                    android:textColor="@color/simi_color_dark_gray"
+                    android:textSize="11sp" />
             </LinearLayout>
-            <com.meijialife.simi.ui.TagGroup
-   				 android:id="@+id/ll_user_tags"
-   				 style="@style/TagGroup"
-   				 android:clickable="false"
-   				 android:focusable="false"
-   				  />
-            <LinearLayout
+
+              <LinearLayout
+               android:id="@+id/ll_fav"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/ll_addr"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="5dp"
+                android:layout_toRightOf="@id/item_iv_icon"
+                android:orientation="horizontal" >
+            	
+               <RelativeLayout
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   >
+                  <ImageView
+                     android:layout_width="15dp"
+                     android:layout_height="15dp"
+                     android:layout_gravity="center"
+                     android:layout_marginTop="2dp"
+                     android:src="@drawable/icon_sec_fav" />
+                   </RelativeLayout>
+               	  <com.meijialife.simi.ui.TagGroup
+					 android:id="@+id/ll_user_tags"
+					 style="@style/TagGroup"
+					 android:clickable="false"
+					 android:focusable="false"
+		 			 />
+               </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/ll_fav"
                 android:layout_centerVertical="true"
                 android:layout_marginBottom="5dp"
                 android:layout_toRightOf="@id/item_iv_icon"
@@ -122,16 +151,13 @@
                     android:id="@+id/item_tv_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
                     android:text="全市有四个分部，50多名专业人员，服务不满意，免部分费用"
-                    android:textSize="11sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/simi_color_dark_gray"
+                    android:textSize="11sp" />
             </LinearLayout>
         </LinearLayout>
-
-    
     </RelativeLayout>
-<!-- 
+    <!--   
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -147,16 +173,18 @@
             android:gravity="center_horizontal"
             android:orientation="horizontal" >
         </LinearLayout>
-    </RelativeLayout> -->
+    </RelativeLayout>
+    -->
 
-     <com.meijialife.simi.ui.MyHorizontalScrollView
+    <com.meijialife.simi.ui.MyHorizontalScrollView
         android:id="@+id/id_horizontalScrollView"
         android:layout_width="fill_parent"
         android:layout_height="120dp"
         android:layout_gravity="center_horizontal"
         android:background="@android:color/white"
-        android:scrollbars="none" 
-        >
+        android:layout_marginTop="5dp"
+        android:scrollbars="none" >
+
         <LinearLayout
             android:id="@+id/id_gallery"
             android:layout_width="wrap_content"
@@ -164,8 +192,8 @@
             android:layout_gravity="center_vertical"
             android:orientation="horizontal" >
         </LinearLayout>
-  </com.meijialife.simi.ui.MyHorizontalScrollView>
-    
+    </com.meijialife.simi.ui.MyHorizontalScrollView>
+
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
