--- a/res/layout/secretary_list_item.xml
+++ b/res/layout/secretary_list_item.xml
@@ -50,6 +50,7 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="10dp"
                     android:text="会计"
+                    android:textSize="11sp"
                     android:textColor="@color/simi_color_dark_gray" />
 
                 <TextView
@@ -58,6 +59,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:text="工商代理人"
+                    android:textSize="11sp"
                     android:textColor="@color/simi_color_dark_gray" />
             </LinearLayout>
 
@@ -89,6 +91,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="北京-海淀区"
+                        android:textSize="11sp"
                         android:textColor="@color/simi_color_dark_gray" />
                 </LinearLayout>
 
@@ -113,19 +116,44 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="下单10分钟内相应"
+                        android:textSize="11sp"
                         android:textColor="@color/simi_color_dark_gray" />
                 </LinearLayout>
             </LinearLayout>
-          <com.meijialife.simi.ui.TagGroup
-			 android:id="@+id/ll_user_tags"
-			 style="@style/TagGroup"
-			 android:clickable="false"
-			 android:focusable="false"
-		  />
-            <LinearLayout
+           <LinearLayout
+               android:id="@+id/ll_fav"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/ll_addr"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="5dp"
+                android:layout_toRightOf="@id/item_iv_icon"
+                android:orientation="horizontal" >
+            	
+               <RelativeLayout
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_alignBottom="@id/ll_user_tags"
+                   >
+                  <ImageView
+                     android:layout_width="15dp"
+                     android:layout_height="15dp"
+                     android:layout_gravity="center"
+                     android:layout_marginTop="2dp"
+                     android:src="@drawable/icon_sec_fav" />
+                   </RelativeLayout>
+               	  <com.meijialife.simi.ui.TagGroup
+					 android:id="@+id/ll_user_tags"
+					 style="@style/TagGroup"
+					 android:clickable="false"
+					 android:focusable="false"
+		 			 />
+               </LinearLayout>
+        
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/ll_fav"
                 android:layout_centerVertical="true"
                 android:layout_marginBottom="15dp"
                 android:layout_toRightOf="@id/item_iv_icon"
@@ -135,10 +163,12 @@
                     android:id="@+id/item_tv_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
                     android:text="全市有四个分部，50多名专业人员，服务不满意，免部分费用"
                     android:textSize="11sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/simi_color_dark_gray"
+                    android:lines="2"
+                    android:ellipsize="end"
+                    />
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
