--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -98,19 +98,19 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="atg_isAppendMode">false</item>
         <item name="atg_inputHint">@string/add_tag</item>
-        <item name="atg_borderColor">#ffffbb33</item><!--#49C120-->
-        <item name="atg_textColor">@color/simi_color_black</item>
-        <item name="atg_backgroundColor">#ffffbb33</item><!-- #FFFFFF -->
+        <item name="atg_borderColor">#F1F1F1</item><!--#49C120-->
+        <item name="atg_textColor">@color/simi_color_dark_gray</item>
+        <item name="atg_backgroundColor">#F1F1F1</item><!-- #FFFFFF -->
         <item name="atg_dashBorderColor">#AAAAAA</item>
         <item name="atg_inputHintColor">#80000000</item>
         <item name="atg_inputTextColor">#DE000000</item>
         <item name="atg_checkedBorderColor">#49C120</item>
         <item name="atg_checkedTextColor">#FFFFFF</item>
         <item name="atg_checkedMarkerColor">#FFFFFF</item>
-        <item name="atg_checkedBackgroundColor">#49C120</item>
-        <item name="atg_pressedBackgroundColor">#ffffbb33</item>
+        <item name="atg_checkedBackgroundColor">#F1F1F1</item>
+        <item name="atg_pressedBackgroundColor">#F1F1F1</item>
         <item name="atg_borderStrokeWidth">0.5dp</item>
-        <item name="atg_textSize">13sp</item>
+        <item name="atg_textSize">11sp</item>
         <item name="atg_horizontalSpacing">4dp</item>
         <item name="atg_verticalSpacing">4dp</item>
         <item name="atg_horizontalPadding">3dp</item>
