--- a/res/layout/bind_mobile_layout.xml
+++ b/res/layout/bind_mobile_layout.xml
@@ -25,6 +25,7 @@
                 android:orientation="vertical" >
                 
                 <LinearLayout
+                    android:id="@+id/ll_user_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal" >
