--- a/res/layout/index_1.xml
+++ b/res/layout/index_1.xml
@@ -17,16 +17,39 @@
         android:layout_below="@id/layout_calendar"
         android:background="@color/activity_bg_color"
         android:orientation="vertical" >
+        
+        
+        <ImageView
+            android:id="@+id/iv_no_card"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/no_card_tip"
+            android:layout_gravity="center"
+            android:layout_marginTop="25dp"
+            android:gravity="center_horizontal"
+            />
 
         <TextView
             android:id="@+id/tv_tips"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp"
+            android:paddingTop="0.5dp"
+            android:gravity="center_horizontal"
+            android:text="貌似这天你没事哦~"
+            android:textColor="@color/text_normal"
+             />
+        
+       <!--   <TextView
+            android:id="@+id/tv_tips"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:drawableTop="@drawable/no_card_tip"
             android:gravity="center_horizontal"
-            android:text="貌似这天你没事哦~" />
+            android:paddingTop="10dp"
+            android:text="貌似这天你没事哦~" /> -->
 
         <ListView
             android:id="@+id/listview"
