--- a/res/layout/login_layout.xml
+++ b/res/layout/login_layout.xml
@@ -45,7 +45,7 @@
                             android:layout_marginLeft="10dp"
                             android:layout_weight="6"
                             android:background="@null"
-                            android:hint="请输入手机号"
+                            android:hint="请输入您的手机号"
                             android:inputType="number"
                             android:maxLength="11"
                             android:singleLine="true"
@@ -103,7 +103,7 @@
                             android:layout_marginLeft="10dp"
                             android:layout_weight="6"
                             android:background="@null"
-                            android:hint="输入验证码"
+                            android:hint="请输入验证码"
                             android:inputType="number"
                             android:maxLength="6"
                             android:singleLine="true"
