--- a/res/layout/secreteary_service_list_item.xml
+++ b/res/layout/secreteary_service_list_item.xml
@@ -12,7 +12,7 @@
 
         <LinearLayout
             android:id="@+id/ll_partner_service"
-            android:layout_width="wrap_content"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/item_iv_icon"
