--新版我的页面+优化

--- a/res/layout/card_details_activity.xml
+++ b/res/layout/card_details_activity.xml
@@ -15,11 +15,13 @@
 
         <ImageView
             android:id="@+id/title_btn_left"
-            android:layout_width="50dp"
+            android:layout_width="130dp"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:focusable="true"
             android:scaleType="centerInside"
+            android:paddingLeft="20dp"
+        	android:paddingRight="90dp"	
             android:src="@drawable/title_left_back"
             android:visibility="gone" />
 
@@ -61,7 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="编辑"
+                android:text="修改"
                 android:textColor="@color/simi_color_red"
                 android:textSize="15sp" />
         </RelativeLayout>
