--- a/res/layout/secretary_list_item.xml
+++ b/res/layout/secretary_list_item.xml
@@ -12,9 +12,10 @@
 
         <com.meijialife.simi.ui.RoundImageView
             android:id="@+id/item_iv_icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
             android:src="@drawable/ic_defult_touxiang"
             imagecontrol:border_inside_color="@color/simi_color_white"
             imagecontrol:border_outside_color="@color/simi_color_white"
@@ -51,7 +52,9 @@
                     android:paddingLeft="10dp"
                     android:text="会计"
                     android:textSize="11sp"
-                    android:textColor="@color/simi_color_dark_gray" />
+                    android:textColor="@color/simi_color_dark_gray" 
+                    android:visibility="gone"
+                    />
 
                 <TextView
                     android:id="@+id/item_tv_fav"
