--- a/res/layout/calendar_layout.xml
+++ b/res/layout/calendar_layout.xml
@@ -61,7 +61,9 @@
                     android:layout_height="22dp"
                     android:layout_marginLeft="15dp"
                     android:layout_centerVertical="true"
-                    android:background="@drawable/main_menu" />
+                    android:background="@drawable/main_menu" 
+                    android:visibility="gone"
+                    />
                 <!-- 查看自己发布的按钮 -->
                 <ImageButton
                     android:id="@+id/btn_chakan"
