--- a/res/layout/find_2_fra.xml
+++ b/res/layout/find_2_fra.xml
@@ -30,7 +30,9 @@
                 android:button="@null"
                 android:gravity="center"
                 android:text="秘书助理"
-                android:textColor="@color/index2_radiobutton_color" />
+                android:textColor="@color/index2_radiobutton_color"
+                android:textSize="13sp"
+                 />
 
             <RadioButton
                 android:layout_width="0dp"
@@ -39,7 +41,9 @@
                 android:button="@null"
                 android:gravity="center"
                 android:text="综合服务"
-                android:textColor="@color/index2_radiobutton_color" />
+                android:textColor="@color/index2_radiobutton_color"
+                android:textSize="13sp"
+                 />
 
             <RadioButton
                 android:layout_width="0dp"
@@ -48,7 +52,10 @@
                 android:button="@null"
                 android:gravity="center"
                 android:text="设计策划"
-                android:textColor="@color/index2_radiobutton_color" />
+                android:textColor="@color/index2_radiobutton_color"
+                 android:textSize="13sp"
+                 />
+            
 
             <RadioButton
                 android:layout_width="0dp"
@@ -57,6 +64,7 @@
                 android:button="@null"
                 android:gravity="center"
                 android:text="办公用品"
+                android:textSize="13sp"
                 android:textColor="@color/index2_radiobutton_color" />
         </RadioGroup>
 
@@ -107,8 +115,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="42dp"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dip"
         android:layout_weight="1.0"
         android:divider="@color/cut_off_rule"
         android:dividerHeight="0.5dp" >
