--- a/res/layout/layout_title_bar.xml
+++ b/res/layout/layout_title_bar.xml
@@ -8,11 +8,12 @@
 
     <ImageView
         android:id="@+id/title_btn_left"
-        android:layout_width="90dp"
+        android:layout_width="130dp"
         android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"
         android:focusable="true"
-        android:scaleType="centerInside"
+        android:scaleType="center"
+        android:paddingLeft="30dp"
+        android:paddingRight="90dp"
         android:src="@drawable/title_left_back"
         android:visibility="gone" />
 
