--- a/res/layout/my_wallet_list_item.xml
+++ b/res/layout/my_wallet_list_item.xml
@@ -13,14 +13,14 @@
         android:layout_marginTop="5dp" >
 
         <TextView
-            android:id="@+id/item_tv_name"
+            android:id="@+id/item_tv_order_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="收到技能卡费用" />
 
         <TextView
-            android:id="@+id/item_tv_count"
+            android:id="@+id/item_tv_order_pay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -44,7 +44,7 @@
             android:text="11-29 03:24" />
 
         <TextView
-            android:id="@+id/item_tv_account"
+            android:id="@+id/item_tv_mobile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
