--- a/res/layout/friend_list_item.xml
+++ b/res/layout/friend_list_item.xml
@@ -3,7 +3,8 @@
     xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+     >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -31,6 +32,20 @@
             android:layout_marginLeft="18dp"
             android:layout_toRightOf="@id/item_iv_icon"
             android:text="张三" />
+
+         <CheckBox
+             android:id="@+id/cb_check_box"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_alignBaseline="@id/item_tv_name"
+             android:layout_alignParentRight="true"
+             android:gravity="center_vertical"
+             android:text=""
+             android:visibility="gone"
+             android:focusableInTouchMode="false"
+             android:focusable="false"
+              />
+  
     </RelativeLayout>
 
 </LinearLayout>
